--- a/README.rdoc
+++ b/README.rdoc
@@ -7,8 +7,10 @@ A simple command line utility to move files/folders to a "trash" folder before d
 == Usage
 
 From the command line:
-
+  trash [file/directory name(s)]
+  # example:
   trash potentially-important-file.txt
+  trash this-folder that-folder some-random-file.txt
   
 Handles multiple files with the same name
 
@@ -16,10 +18,16 @@ Handles multiple files with the same name
   trash ~/Documents/Christmas/shopping-list.txt
   trash ~/Documents/AutoParts/shopping-list.txt
   
-Trash folder will contain:
+The trash will contain:
 * shopping-list.txt     # originally ~/Documents/Groceries/shopping-list.txt
 * shopping-list01.txt   # originally ~/Documents/Christmas/shopping-list.txt
 * shopping-list02.txt   # originally ~/Documents/AutoParts/shopping-list.txt
+
+You will find the files that you've trashed in ~/.Trash
+
+== Installation
+
+  gem install trash
 
 == Note on Patches/Pull Requests
  
